--- a/assets/css/style-me.css
+++ b/assets/css/style-me.css
@@ -1,3 +1,7 @@
+.collapse .mx-lg-auto{
+  margin-right: 0px!important;
+  margin-left: auto!important;
+}
 span.check{
   display: block;
   border-radius: 50%;
@@ -11,6 +15,21 @@ span.check{
   font-weight: bold;
 }
 
+a.title{
+  letter-spacing: 1px;
+  font-size: 1.2em!important;
+  border-radius: 5px;
+}
+
+p.text-para{
+  color: black!important;
+  letter-spacing: 0.5px;
+}
+
+#newbox{
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 2px 4px 0px inset;
+  padding: 20px 10px 1px 10px;
+}
 
 p.flexself{
   display: flex;
@@ -31,6 +50,7 @@ p.tengahbawah{
   width: 800px;
   margin: 20px auto;
   font-size: 1.1em;
+  letter-spacing: 1px;
 }
 
 p.kiribawah{
@@ -43,6 +63,14 @@ p.kiribawah{
 .blog-info{
   border: 2px dashed #3F3A64;
   padding-bottom: 20px;
+  transition: 0.4s;
+}
+
+.blog-info:hover{
+  transform: scale(1.01);
+}
+
+h3.title-medium{
 }
 
 .square{
@@ -53,6 +81,8 @@ p.kiribawah{
 }
 
 .square .box{
+  display: flex;
+  align-items: center;
   width: 290px;
   height: 65px;
   line-height: 65px;
@@ -61,6 +91,40 @@ p.kiribawah{
   margin-bottom: 15px;
   background: white;
   cursor: default;
+  position: relative;
+  top: 0px;
+  transition: 0.4s;
+}
+
+p#fa{
+  background: transparent!important;
+  color: rgba(0,0,0,0.8);
+  transition: 0.3s;
+  margin-top: -3px;
+  font-weight: bold!important;
+  font-size: 1.02em;
+  margin-right: 12px;
+}
+
+.fa-plus{
+  margin-top: 0px!important;
+}
+
+.fa-angle-double-right{
+  transform: rotate(-90deg);
+  margin-top: 0px!important;
+}
+
+.square .box:hover > p#fa{
+  background: transparent!important;
+  color: white!important;
+}
+
+.square .box:hover{
+  background-image: linear-gradient(to right, #3ab5b0 0%, #3d99be 31%, #56317a 100%);
+  color: #F5F5F5;
+  top: -5px;
+  transform: scale(1.05);
 }
 
 span.icon-expand, span.fa-bars, span.fa, span.icon-close{
@@ -87,6 +151,7 @@ section#fitur .right{
   align-items: center;
   text-align: center;
   width: 100%;
+  position: relative;
 }
 
 section#fitur .right img{
@@ -103,6 +168,53 @@ section#fitur .right img:hover{
 
 .fitur{
 }
+
+.star{
+  box-sizing: border-box;
+  display: flex;
+  list-style: none;
+  margin-top: -7px;
+}
+.star .fa {
+  font-size: 25px;
+  margin-right: 30px;
+  margin-top: 5px;
+  list-style: none;
+  background: transparent;
+}
+
+.star .fa-star-half-o{
+  font-size: 25px;
+  margin-right: 30px;
+  margin-top: 5px;
+  list-style: none;
+  background: transparent;
+  color: orange!important;
+}
+
+.star .checked{
+  color: orange;
+}
+
+.testi-des h3{
+  position: relative;
+  top: -5px;
+}
+
+.testi-des .indentity{
+  position: relative;
+  top: -5px;
+}
+
+section#testimonials{
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
+
+blockquote q{
+  font-size: 1.35em;
+  letter-spacing: 1px;
+}
+
 
 @media (max-width: 1170px){
   section#fitur .right{
@@ -123,7 +235,7 @@ section#fitur .right img:hover{
   section#fitur{
     flex-direction: column;
     width: 100%;
-    padding: 60px 5px 60px 20px;
+    padding: 60px 20px;
   }
   section#fitur .left{
     width: 100%;
@@ -140,6 +252,9 @@ section#fitur .right img:hover{
   }
   .square .box{
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
   }
   p.kiribawah{
     width: 100%;
